rewritten most of the software in a more concise manner

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,5 @@ board = teensy35
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = Audio
-build_flags = -D USB_MIDI_SERIAL
+build_flags = -D USB_MIDI_SERIAL -D TEENSY_OPT_FASTEST_PURE_CODE_LTO
+board_build.f_cpu = 168000000
